5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4345/executions/1633_2945.log
== TEST (2019-04-02 18:03:42) 
-- CODE:
Massa=5**2*4* 3,14*5/4
print(massa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(massa)
NameError: name 'massa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:04:05) 
-- CODE:
Massa=(5**2*4* 3,14*5/4)
print(massa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(massa)
NameError: name 'massa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:04:28) 
-- CODE:
print(Massa=(5**2*4* 3,14*5/4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(Massa=(5**2*4* 3,14*5/4))
TypeError: 'Massa' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:04:41) 
-- CODE:
print(M(5**2*4* 3,14*5/4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(M(5**2*4* 3,14*5/4))
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:04:45) 
-- CODE:
print(5**2*4* 3,14*5/4))

-- ERROR:
File "XXXX", line 1
    print(5**2*4* 3,14*5/4))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:04:54) 
-- CODE:
print(5**2*4* 3,14*5/4)

-- OUTPUT:
300 17.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:04:59) 
-- CODE:
print(5**2*4* 3,14*5/4)

-- EXECUTION TIME:
0.193548
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
300 17.5
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
300 17.5
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
300 17.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:05:16) 
-- CODE:
print(465.3)

-- OUTPUT:
465.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:05:30) 
-- CODE:
print(465.33)

-- EXECUTION TIME:
0.21044
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
465.33
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
465.33
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
465.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:07) 
-- CODE:
print(round(5**2*6*3.14*6/4))
-- OUTPUT:
706
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:18) 
-- CODE:
print(round(5**2*6*3.14*6//4))
-- OUTPUT:
706
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:43) 
-- CODE:
print(round(5**2*6*3.14*6%4))
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:08:00) 
-- CODE:
print(round(5**2*6*3.14*6/4))
-- EXECUTION TIME:
0.225222
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
706
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
706
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
706
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:08:01) 
-- CODE:
print(round(5**2*6*3.14*6/4))
-- OUTPUT:
706
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:08:44) 
-- CODE:
print(round n2(5**2*6*3.14*6/4))
-- ERROR:
File "XXXX", line 1
    print(round n2(5**2*6*3.14*6/4))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:09:09) 
-- CODE:
M=(round(5**2*6*3.14*6/4))
print(M)
-- OUTPUT:
706
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:09:15) 
-- CODE:
M=(round(5**2*6*3.14*6/4))
print(M)
-- EXECUTION TIME:
0.168714
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
706
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
706
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
706
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:09:39) 
-- CODE:
M=(round(5**2*6*3.14*6/4))
print(M)
-- OUTPUT:
706
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:10:00) 
-- CODE:
M=(round(5**2*6*3.14*6/4 2,n))
print(M)
-- ERROR:
File "XXXX", line 1
    M=(round(5**2*6*3.14*6/4 2,n))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:10:26) 
-- CODE:
M=(round(5**2*6*3.14*6/4 )n,2)
print(M)
-- ERROR:
File "XXXX", line 1
    M=(round(5**2*6*3.14*6/4 )n,2)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:10:38) 
-- CODE:
M=(round(5**2*6*3.14*6/4 )2)
print(M)
-- ERROR:
File "XXXX", line 1
    M=(round(5**2*6*3.14*6/4 )2)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:10:44) 
-- CODE:
M=(round(5**2*6*3.14*6//4 )2)
print(M)
-- ERROR:
File "XXXX", line 1
    M=(round(5**2*6*3.14*6//4 )2)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:10:59) 
-- CODE:
M=(round(5**2*6*3.14*6%4)2)
print(M)
-- ERROR:
File "XXXX", line 1
    M=(round(5**2*6*3.14*6%4)2)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:11:02) 
-- CODE:
M=(round(5**2*6*3.14*6%4)2)
print(M)
-- EXECUTION TIME:
0.130357
-- ERROR:
  File "/home/codebench/codes/1633/2945/main.py", line 1
    M=(round(5**2*6*3.14*6%4)2)
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:04) 
-- CODE:
M=(round(5**2*6*3.14*6%4))
print(M)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:18:18) 
-- CODE:
M=(round(5**2*6*3.14*6%4))
print(2.00)
-- EXECUTION TIME:
0.136885
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
2.0
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
2.0
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:21) 
-- CODE:
M=(round(5**2*6*3.14*6%4))
print(2.00)
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:27) 
-- CODE:
M=(round(5**2*6*3.14*6%4))
print(2.0000)
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:43) 
-- CODE:
M=(round(5**2*6*3.14*6%4))
print(round)
-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:14) 
-- CODE:
M=(round(5**2*6*pi*6%4))
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M=(round(5**2*6*pi*6%4))
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:20:17) 
-- CODE:
M=(round(5**2*6*pi*6%4))
print(round)
-- EXECUTION TIME:
0.198104
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2945/main.py", line 1, in <module>
    M=(round(5**2*6*pi*6%4))
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:35) 
-- CODE:
M=(round(5**2*6*(math(pi))*6%4))
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M=(round(5**2*6*(math(pi))*6%4))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:59) 
-- CODE:
M=(round(5**2*6*(int(math(pi)))*6%4))
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M=(round(5**2*6*(int(math(pi)))*6%4))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:01) 
-- CODE:
M=(round(5**2*6*(int(math(pi)))*6%4))
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M=(round(5**2*6*(int(math(pi)))*6%4))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:01) 
-- CODE:
M=(round(5**2*6*(int(math(pi)))*6%4))
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M=(round(5**2*6*(int(math(pi)))*6%4))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:01) 
-- CODE:
M=(round(5**2*6*(int(math(pi)))*6%4))
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M=(round(5**2*6*(int(math(pi)))*6%4))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:01) 
-- CODE:
M=(round(5**2*6*(int(math(pi)))*6%4))
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M=(round(5**2*6*(int(math(pi)))*6%4))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:02) 
-- CODE:
M=(round(5**2*6*(int(math(pi)))*6%4))
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M=(round(5**2*6*(int(math(pi)))*6%4))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:02) 
-- CODE:
M=(round(5**2*6*(int(math(pi)))*6%4))
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M=(round(5**2*6*(int(math(pi)))*6%4))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:23:14) 
-- CODE:
M= round(6**2*5*pi*8/4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M= round(6**2*5*pi*8/4)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:23:27) 
-- CODE:
M= round(6**2*5*3,14*8/4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M= round(6**2*5*3,14*8/4)
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:23:51) 
-- CODE:
M= round (float(6**2*5*3,14*8/4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M= round (float(6**2*5*3,14*8/4))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:04) 
-- CODE:
M= round (float 2(6**2*5*3,14*8/4))
-- ERROR:
File "XXXX", line 1
    M= round (float 2(6**2*5*3,14*8/4))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:21) 
-- CODE:
M= round (float (6**2*5*3,14*8/4)2)
-- ERROR:
File "XXXX", line 1
    M= round (float (6**2*5*3,14*8/4)2)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:43) 
-- CODE:
M= round (float (6**2*5*3,14*8/4)2)
print(M)
-- ERROR:
File "XXXX", line 1
    M= round (float (6**2*5*3,14*8/4)2)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:53) 
-- CODE:
M= round((6**2*5*3,14*8/4)2)
print(M)
-- ERROR:
File "XXXX", line 1
    M= round((6**2*5*3,14*8/4)2)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:26:31) 
-- CODE:
M= round((6.0**2*5.65*3,14*8.66/4))
print(M)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M= round((6.0**2*5.65*3,14*8.66/4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:26:42) 
-- CODE:
M= round(6.0**2*5.65*3,14*8.66/4)
print(M)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M= round(6.0**2*5.65*3,14*8.66/4)
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:26:55) 
-- CODE:
M= round(6.0**2*5.65*3,14*8.66/4)
print(M)
-- EXECUTION TIME:
0.158535
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2945/main.py", line 1, in <module>
    M= round(6.0**2*5.65*3,14*8.66/4)
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:10) 
-- CODE:
round(6.0**2*5.65*3,14*8.66/4)
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(6.0**2*5.65*3,14*8.66/4)
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:51) 
-- CODE:
round(6.0**2*5.65*3,14*8.66/4)
print(round)
-- EXECUTION TIME:
0.159776
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2945/main.py", line 1, in <module>
    round(6.0**2*5.65*3,14*8.66/4)
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:29:30) 
-- CODE:
round(4**2*9*3.14*9/4)
print(round)
-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
